--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,11 +6,11 @@
 #    By: gcavanna <gcavanna@student.42firenze.it    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/01 13:50:09 by gcavanna          #+#    #+#              #
-#    Updated: 2023/12/13 17:16:47 by gcavanna         ###   ########.fr        #
+#    Updated: 2023/12/13 17:32:34 by gcavanna         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = ClapTrap
+NAME = Animal02
 
 SRC = main.cpp Brain.cpp Animal.cpp Dog.cpp Cat.cpp WrongAnimal.cpp WrongCat.cpp
 CC = c++
